[gd_scene load_steps=2 format=3 uid="uid://c1exnb87jhdda"]

[ext_resource type="Script" path="res://scripts/tests/GameManagerTest.gd" id="1_r8kya"]

[node name="GameManagerTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r8kya")

[node name="InfoLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 50.0
offset_right = 600.0
offset_bottom = 300.0
text = "GameManager Info"
autowrap_mode = 3

[node name="StateOption" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 650.0
offset_top = 50.0
offset_right = 850.0
offset_bottom = 90.0
text_overrun_behavior = 3

[node name="StateLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 650.0
offset_top = 20.0
offset_right = 850.0
offset_bottom = 50.0
text = "Change State:"

[node name="PauseButton" type="Button" parent="."]
layout_mode = 0
offset_left = 650.0
offset_top = 120.0
offset_right = 850.0
offset_bottom = 160.0
text = "Pause"

[node name="DebugButton" type="Button" parent="."]
layout_mode = 0
offset_left = 650.0
offset_top = 180.0
offset_right = 850.0
offset_bottom = 220.0
text = "Enable Debug"

[node name="SaveButton" type="Button" parent="."]
layout_mode = 0
offset_left = 650.0
offset_top = 240.0
offset_right = 850.0
offset_bottom = 280.0
text = "Save Game"

[node name="LoadButton" type="Button" parent="."]
layout_mode = 0
offset_left = 650.0
offset_top = 300.0
offset_right = 850.0
offset_bottom = 340.0
text = "Load Game"

[node name="TestResultsLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 350.0
offset_right = 600.0
offset_bottom = 400.0
text = "Test Results: Ready"
